@startuml

interface Repository <T> {
    + findById(id: String): T
    + findAll(offset: Int, limit: Int): List<T>
    + save(entity: T)
    + deleteById(id: UInt)
    + clear()
}

interface ChannelRepositoryInterface {
    + createChannel(channel: Channel): Channel?
    + findByUserId(userId: String, offset: Int, limit: Int): List<Channel>
    + joinChannel(channelId: UInt, userId: Uint, accessControl: AccessControl)
    + isUserInChannel(channelId: UInt, userId: UInt): Boolean
    + findInvitation(channelId: UInt): ChannelInvitation?
    + updateInvitation(invitation: ChannelInvitation)
    + deleteInvitation(invitation: ChannelInvitation)
    + createInvitation(invitation: ChannelInvitation)
    + findUserAccessControl(channelId: UInt, userId: UInt): AccessControl?
    + findPublicByName(name: String): Channel?
    + findPublicByName(name: String): Channel?
    + findByName(uId: Int, name: String, offset: Int, limit: Int): List<Channel>
    + findByName(name: String, offset: Int, limit: Int): List<Channel>
    + findAccessControl(uid: UInt, channelId: UInt): AccessControl?
    + findByInvitationCode(invitationCode: String): Channel?
    + findPublicChannel(uId: UInt, offset: Int, limit: Int): List<Channel>
    + leaveChannel(channelId: UInt, userId: UInt)
}

interface UserRepositoryInterface {
    + createUser(user: User): User?
    + findInvitation(inviterId: UInt, invitationCode: String): UserInvitation?
    + deleteInvitation(invitation: UserInvitation)
    + createInvitation(invitation: UserInvitation): Boolean
    + validateToken(token: String): Boolean
    + findByUserName(userName: String): User?
    + createToken(token: UserToken): Boolean
    + deleteToken(token: String): Boolean
    + findByToken(token: String): User?
}

interface MessageRepositoryInterface {
    + createMessage(message: Message): Message?
    + findMessagesByChannelId(channelId: Uint, limit: UInt, offset: UInt): List<Message>
    + emitAllMessages(uId: UInt, lastEventId: UInt, emitter: (Message) -> Unit)
    + findMessagesByTimeStamp(channelId: UInt, timestamp: Timestamp, limit: UInt, isBefore: Boolean): List<Message>
}

Repository <|-- UserRepositoryInterface
Repository <|-- ChannelRepositoryInterface
Repository <|-- MessageRepositoryInterface

namespace model.channel {}
namespace model.message {}
namespace model.user {}

MessageRepositoryInterface o-- message
UserRepositoryInterface o-- user
ChannelRepositoryInterface o-- channel


interface Transaction {
    + channelRepo: ChannelRepositoryInterface
    + userRepo: UserRepositoryInterface
    + messageRepo: MessageRepositoryInterface
    + rollback()
}

interface TransactionManager {
    + <R>run(block: Transaction.() -> R): R
}

@enduml